fixed images overflow

--- a/fact.css
+++ b/fact.css
@@ -141,7 +141,6 @@ h3 {
 }
 .flip-card {
   background-color: transparent;
-  width: 100%;
   height: 100%;
   perspective: 1000px; 
   border: 8px solid black;
@@ -160,9 +159,10 @@ h3 {
   transform: rotateY(180deg);
 }
 
+
 .flip-card-front,
 .flip-card-back {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden; 
@@ -174,7 +174,9 @@ h3 {
   color: black;
 }
 
-.flip-card-back {
+.flex-container .flip-card-back {
+  position: absolute;
+  top: 0;
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
