--- a/style.css
+++ b/style.css
@@ -77,13 +77,13 @@ img{
     margin: 0%;
     padding: 0;
     display: flex;
-    justify-content: space-around;
+    flex-flow: row wrap;
     gap: 20px;
 }
 #section-b li{
     background: white;
     color: rgb(62, 40, 40);
-    width: 33%;
+    flex: 1 1 300px;
     margin-bottom: 1em;
     
 }
@@ -137,20 +137,22 @@ img{
   }
   .flex-container {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     flex-direction: row;
+    width: 100%;
   }
 
   .flex-container  div {
     background-color: #f1f1f1;
-    width: 100%;
-    height: 500px;
+    flex: 1 1 200px;
+    height: auto;
     text-align: center;
     font-size: 10px;
   }
   .mimage{
       height: 235px;
-      width: 235px;
+      width: 100%;
+      object-fit: cover;
   }
   .english{
       padding-left:12px;
